# launchonomy

./: .gitignore  AUTOGEN_ARCHITECTURE.md  AUTOGEN_QUICK_REFERENCE.md  DEVELOPMENT_GUIDE.md  LICENSE  MANIFEST.in  README.md  SYSTEM_STATUS.md  main.py  pyproject.toml  requirements.txt  setup.py  test_agent_loading.py  test_auto_provision.py  test_auto_provision_integration.py  test_continuous_loop.py  test_continuous_loop_mock.py  test_enhanced_status.py  test_memory_integration.py  test_mission_linking.py  test_repl_demo.py  test_workflow_agents_registration.py  test_workflow_auto_provision.py
backend/: main.py
docs/: DEVELOPMENT_GUIDE.md  MISSION_LIFECYCLE.md  README.md  TROUBLESHOOTING.md  WORKSPACE_SYSTEM.md
launchonomy/: __init__.py  cli.py  cli_workspace.py
launchonomy/agents/: __init__.py  retrieval_agent.py
launchonomy/agents/base/: __init__.py  workflow_agent.py
launchonomy/agents/csuite/: __init__.py
launchonomy/agents/workflow/: __init__.py  agent_dev.py  agent_qa.py  agent_trainer.py  analytics.py  auto_provision_agent.py  campaign.py  deploy.py  finance.py  growth.py  scan.py  tool_dev.py  tool_qa.py  (+1 more)
launchonomy/core/: __init__.py  agent_manager.py  communication.py  mission_manager.py  orchestrator.py  vector_memory.py  workspace_manager.py
launchonomy/registry/: __init__.py  registry.json  registry.py
launchonomy/templates/: orch_primer.txt  specialist_executionmanager.txt
launchonomy/tools/: __init__.py
launchonomy/utils/: __init__.py  consensus.py  cost_calculator.py  logging.py  memory_helper.py  mission_log_navigator.py  optional_imports.py  schema_validator.py
orchestrator/: agent_comm.py  agent_manager.py  cli.py  consensus.py  decision_cycle.py  execution.py  logging_utils.py  mission_management.py  orchestrator_agent.py  orchestrator_agent_refactored.py  registry.json  registry.py  review.py  utils.py  workflow_manager.py
orchestrator/agents/: __init__.py  analytics_agent.py  auto_provision_agent.py  base_workflow_agent.py  campaign_agent.py  deploy_agent.py  finance_agent.py  growth_agent.py  scan_agent.py
orchestrator/templates/: mission_schema.json  orch_primer.txt  retrospective.txt  specialist_businessstrategist.txt  specialist_generic.txt  specialist_marketvalidator.txt
tests/: README.md  test_agent_loading.py  test_auto_provision.py  test_auto_provision_integration.py  test_basic_health.py  test_codebase_health.py  test_continuous_loop.py  test_continuous_loop_mock.py  test_csuite_registry_separation.py  test_enhanced_logging.py  test_install.py  test_memory_integration.py  test_mission_linking.py  test_repl_demo.py  test_workflow_agents_registration.py  test_workflow_auto_provision.py
(+25 files in other folders)
